--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -4,18 +4,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation = "vertical"
-    android:background="@color/colorAccent"
+    android:background="@color/colorPrimary"
     tools:context=".SplashActivity">
     <Space
         android:layout_width="match_parent"
         android:layout_height="0px"
         android:layout_weight="3"/>
-    <ImageView
-        android:src="@drawable/splash_icon"
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="0px"
-        android:layout_weight="2"
-        android:textAlignment="center"/>
+        android:layout_height="100dp"
+        android:gravity = "center"
+        android:text="Sasha"
+        android:fontFamily="serif-monospace"
+        android:textSize="20sp" />
     <Space
         android:layout_width="match_parent"
         android:layout_height="0px"
