--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -14,6 +14,8 @@
         android:text="Sasha"
         android:fontFamily="serif-monospace"
         android:textSize="20sp"
+        android:elevation="10dp"
+        android:background="@color/colorPrimary"
         android:textColor="@android:color/black" />
 
     <FrameLayout
