add icon asset & put text data in @string

--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -14,7 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:gravity = "center"
-        android:text="Sasha"
+        android:text="@string/sasha"
         android:fontFamily="serif-monospace"
         android:textSize="20sp" />
     <Space
