--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,284 +4,39 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation = "vertical"
+    android:background="@color/colorPrimary"
     tools:context=".MainActivity">
 
-    <!-- top menu -->
-    <LinearLayout
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="0px"
-        android:layout_weight="1"
-        android:background="@android:color/white"
-        android:paddingBottom="3dp"
-        android:orientation="vertical">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@android:color/white">
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textAlignment="center"
-                android:text="마리의 비밀상점"
-                android:paddingBottom="10dp"
-                android:textSize="18sp"
-                android:layout_gravity="bottom"/>
-        </LinearLayout>
-    </LinearLayout>
+        android:layout_height="80dp"
+        android:gravity = "center"
+        android:text="@string/sasha"
+        android:fontFamily="serif-monospace"
+        android:textSize="20sp"
+        android:elevation="10dp"
+        android:background="@color/colorPrimary"
+        android:textColor="@android:color/black" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:background="#dddddd">
-    </LinearLayout>
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="11">
-        <LinearLayout
+        android:layout_height="match_parent">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:backgroundTint="#888888"
+            android:id="@+id/recycler_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
-            <!-- 요기서부터 -->
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:orientation="horizontal">
-                <ImageView
-                    android:id="@+id/mari_image_0"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"/>
-                <TextView
-                    android:id="@+id/mari_name_0"
-                    android:textSize="12sp"
-                    android:layout_width="200dp"
-                    android:layout_height="70dp"
-                    android:paddingLeft="20dp"
-                    android:gravity="center|start"
-                    android:text="예시 아이템 이름"/>
-                <ImageView
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:src="@drawable/jewel"/>
-                <TextView
-                    android:id="@+id/mari_price_0"
-                    android:textSize="12sp"
-                    android:layout_width="40dp"
-                    android:layout_height="70dp"
-                    android:paddingLeft="10dp"
-                    android:gravity="center|start"
-                    android:text="3000"/>
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="#eeeeee">
-            </LinearLayout>
-            <!-- 요기까지 -->
-            <!-- 요기서부터 -->
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:orientation="horizontal">
-                <ImageView
-                    android:id="@+id/mari_image_1"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp" />
-                <TextView
-                    android:id="@+id/mari_name_1"
-                    android:textSize="12sp"
-                    android:layout_width="200dp"
-                    android:layout_height="70dp"
-                    android:paddingLeft="20dp"
-                    android:gravity="center|start"
-                    android:text="예시 아이템 이름"/>
-                <ImageView
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:src="@drawable/jewel"/>
-                <TextView
-                    android:id="@+id/mari_price_1"
-                    android:textSize="12sp"
-                    android:layout_width="40dp"
-                    android:layout_height="70dp"
-                    android:paddingLeft="10dp"
-                    android:gravity="center|start"
-                    android:text="3000"/>
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="#eeeeee">
-            </LinearLayout>
-            <!-- 요기까지 -->
-            <!-- 요기서부터 -->
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:orientation="horizontal">
+            android:paddingHorizontal="1dp"/>
 
-                <ImageView
-                    android:id="@+id/mari_image_2"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp" />
-                <TextView
-                    android:id="@+id/mari_name_2"
-                    android:textSize="12sp"
-                    android:layout_width="200dp"
-                    android:layout_height="70dp"
-                    android:paddingLeft="20dp"
-                    android:gravity="center|start"
-                    android:text="예시 아이템 이름"/>
-                <ImageView
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:src="@drawable/jewel"/>
-                <TextView
-                    android:id="@+id/mari_price_2"
-                    android:textSize="12sp"
-                    android:layout_width="40dp"
-                    android:layout_height="70dp"
-                    android:paddingLeft="10dp"
-                    android:gravity="center|start"
-                    android:text="3000"/>
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="#eeeeee">
-            </LinearLayout>
-            <!-- 요기까지 -->
-            <!-- 요기서부터 -->
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:orientation="horizontal">
-                <ImageView
-                    android:id="@+id/mari_image_3"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp" />
-                <TextView
-                    android:id="@+id/mari_name_3"
-                    android:textSize="12sp"
-                    android:layout_width="200dp"
-                    android:layout_height="70dp"
-                    android:paddingLeft="20dp"
-                    android:gravity="center|start"
-                    android:text="예시 아이템 이름"/>
-                <ImageView
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:src="@drawable/jewel"/>
-                <TextView
-                    android:id="@+id/mari_price_3"
-                    android:textSize="12sp"
-                    android:layout_width="40dp"
-                    android:layout_height="70dp"
-                    android:paddingLeft="10dp"
-                    android:gravity="center|start"
-                    android:text="3000"/>
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="#eeeeee">
-            </LinearLayout>
-            <!-- 요기까지 -->
-            <!-- 요기서부터 -->
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:textSize="12sp"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:orientation="horizontal">
-                <ImageView
-                    android:id="@+id/mari_image_4"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp" />
-                <TextView
-                    android:id="@+id/mari_name_4"
-                    android:layout_width="200dp"
-                    android:layout_height="70dp"
-                    android:paddingLeft="20dp"
-                    android:gravity="center|start"
-                    android:text="예시 아이템 이름"/>
-                <ImageView
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:src="@drawable/jewel"/>
-                <TextView
-                    android:id="@+id/mari_price_4"
-                    android:textSize="12sp"
-                    android:layout_width="40dp"
-                    android:layout_height="70dp"
-                    android:paddingLeft="10dp"
-                    android:gravity="center|start"
-                    android:text="3000"/>
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="#eeeeee">
-            </LinearLayout>
-            <!-- 요기까지 -->
-            <!-- 요기서부터 -->
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:orientation="horizontal">
-                <ImageView
-                    android:id="@+id/mari_image_5"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp" />
-                <TextView
-                    android:id="@+id/mari_name_5"
-                    android:textSize="12sp"
-                    android:layout_width="200dp"
-                    android:layout_height="70dp"
-                    android:paddingLeft="20dp"
-                    android:gravity="center|start"
-                    android:text="예시 아이템 이름"/>
-                <ImageView
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:src="@drawable/jewel"/>
-                <TextView
-                    android:id="@+id/mari_price_5"
-                    android:textSize="12sp"
-                    android:layout_width="40dp"
-                    android:layout_height="70dp"
-                    android:paddingLeft="10dp"
-                    android:gravity="center|start"
-                    android:text="3000"/>
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="#eeeeee">
-            </LinearLayout>
-            <!-- 요기까지 -->
-            <Space
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1" />
-        </LinearLayout>
-        <ImageView
-            android:id="@+id/reload_button"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_gravity="bottom|center_horizontal"
-            android:layout_marginBottom="20dp"
-            android:src="@drawable/reload_icon"/>
+        <ProgressBar
+            style="?android:attr/progressBarStyle"
+            android:id="@+id/progress_bar"
+            android:visibility="gone"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:indeterminateDrawable="@drawable/circle_progress"
+            android:indeterminateDuration="1000"/>
     </FrameLayout>
 </LinearLayout>
