--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="colorPrimary">#f7f6f5</color>
     <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#282828</color>
+    <color name="colorAccent">#e7e6e5</color>
 </resources>
