--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -1,24 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation = "vertical"
     android:background="@color/colorPrimary"
     tools:context=".SplashActivity">
-    <Space
-        android:layout_width="match_parent"
-        android:layout_height="0px"
-        android:layout_weight="3"/>
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:gravity = "center"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity = "center"
         android:text="@string/sasha"
+        android:layout_marginBottom="30dp"
         android:fontFamily="serif-monospace"
-        android:textSize="20sp" />
-    <Space
-        android:layout_width="match_parent"
-        android:layout_height="0px"
-        android:layout_weight="4"/>
-</LinearLayout>
+        android:textColor="@android:color/black"
+        android:textSize="30sp" />
+</FrameLayout>
