put loading icon also into each viewholder

--- a/app/src/main/res/layout/single_image.xml
+++ b/app/src/main/res/layout/single_image.xml
@@ -11,6 +11,21 @@
         android:padding="1dp"
         app:layout_constraintDimensionRatio="3:4"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+    </ImageView>
+    <ProgressBar
+        style="?android:attr/progressBarStyle"
+        android:id="@+id/adapter_progress_bar"
+        android:visibility="visible"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:scaleX="0.7"
+        android:scaleY="0.7"
+        android:layout_gravity="center"
+        android:indeterminateDrawable="@drawable/circle_progress"
+        android:indeterminateDuration="1000"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        />
+        app:layout_constraintBottom_toBottomOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
