--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
-    tools:context=".ui.SplashActivity">
+    tools:context=".ui.splash.SplashActivity">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
