--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,21 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation = "vertical"
     android:background="@color/colorPrimary"
     tools:context=".ui.main.MainActivity">
 
     <LinearLayout
+        android:id="@+id/bar_top"
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="wrap_content"
         android:gravity = "center"
         android:textSize="20sp"
         android:elevation="10dp"
-        android:background="@color/colorPrimary">
+        android:background="@color/colorPrimary"
+        app:layout_constraintTop_toTopOf="parent">
         <FrameLayout
+            android:id="@+id/title_top"
             android:layout_width="match_parent"
             android:layout_height="70dp">
             <TextView
@@ -27,6 +31,7 @@
                 android:textSize="20sp"
                 android:textColor="@android:color/black" />
             <LinearLayout
+                android:id="@+id/layout_selector"
                 android:orientation="horizontal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -49,99 +54,93 @@
                     android:src="@drawable/grid_icon"/>
             </LinearLayout>
         </FrameLayout>
+
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="30dp"
-            android:gravity = "center">
+            android:gravity = "center"
+            android:background="@color/colorPrimary">
             <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="30dp"
-                android:gravity = "center">
-                <LinearLayout
-                    android:id="@+id/sort_index_btn"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
+                android:id="@+id/sort_index_btn"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:background="@color/colorAccent">
+                <TextView
+                    android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:background="@color/colorAccent">
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:gravity = "center"
-                        android:text="@string/sort_index"
-                        android:fontFamily="serif-monospace"
-                        android:textSize="15sp"
-                        android:textColor="@android:color/black" />
-                    <ImageView
-                        android:layout_width="10dp"
-                        android:layout_height="10dp"
-                        android:layout_marginTop="1dp"
-                        android:layout_marginStart="2dp"
-                        android:src="@drawable/drop_down_arrow" />
-                </LinearLayout>
-                <LinearLayout
-                    android:id="@+id/sort_atoz_btn"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
+                    android:gravity = "center"
+                    android:text="@string/sort_index"
+                    android:fontFamily="serif-monospace"
+                    android:textSize="15sp"
+                    android:textColor="@android:color/black" />
+                <ImageView
+                    android:layout_width="10dp"
+                    android:layout_height="10dp"
+                    android:layout_marginTop="1dp"
+                    android:layout_marginStart="2dp"
+                    android:src="@drawable/drop_down_arrow" />
+            </LinearLayout>
+            <LinearLayout
+                android:id="@+id/sort_atoz_btn"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:background="@color/colorPrimary">
+                <TextView
+                    android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:background="@color/colorPrimary">
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:gravity = "center"
-                        android:text="@string/sort_atoz"
-                        android:fontFamily="serif-monospace"
-                        android:textSize="15sp"
-                        android:textColor="@android:color/black" />
-                    <ImageView
-                        android:layout_width="10dp"
-                        android:layout_height="10dp"
-                        android:layout_marginTop="1dp"
-                        android:layout_marginStart="2dp"
-                        android:src="@drawable/drop_down_arrow" />
-                </LinearLayout>
-                <LinearLayout
-                    android:id="@+id/sort_date_btn"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
+                    android:gravity = "center"
+                    android:text="@string/sort_atoz"
+                    android:fontFamily="serif-monospace"
+                    android:textSize="15sp"
+                    android:textColor="@android:color/black" />
+                <ImageView
+                    android:layout_width="10dp"
+                    android:layout_height="10dp"
+                    android:layout_marginTop="1dp"
+                    android:layout_marginStart="2dp"
+                    android:src="@drawable/drop_down_arrow" />
+            </LinearLayout>
+            <LinearLayout
+                android:id="@+id/sort_date_btn"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:background="@color/colorPrimary">
+                <TextView
+                    android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:background="@color/colorPrimary">
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:gravity = "center"
-                        android:text="@string/sort_date"
-                        android:fontFamily="serif-monospace"
-                        android:textSize="15sp"
-                        android:textColor="@android:color/black" />
-                    <ImageView
-                        android:layout_width="10dp"
-                        android:layout_height="10dp"
-                        android:layout_marginTop="1dp"
-                        android:layout_marginStart="2dp"
-                        android:src="@drawable/drop_down_arrow" />
-                </LinearLayout>
+                    android:gravity = "center"
+                    android:text="@string/sort_date"
+                    android:fontFamily="serif-monospace"
+                    android:textSize="15sp"
+                    android:textColor="@android:color/black" />
+                <ImageView
+                    android:layout_width="10dp"
+                    android:layout_height="10dp"
+                    android:layout_marginTop="1dp"
+                    android:layout_marginStart="2dp"
+                    android:src="@drawable/drop_down_arrow" />
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
 
-
-
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/bar_top"
+        app:layout_constraintBottom_toBottomOf="parent">
         <androidx.recyclerview.widget.RecyclerView
             android:backgroundTint="#888888"
             android:id="@+id/recycler_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:paddingHorizontal="1dp"/>
-
         <ProgressBar
             style="?android:attr/progressBarStyle"
             android:id="@+id/progress_bar"
@@ -152,4 +151,4 @@
             android:indeterminateDrawable="@drawable/circle_progress"
             android:indeterminateDuration="1000"/>
     </FrameLayout>
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
