--- a/app/src/main/res/layout/img_dialog.xml
+++ b/app/src/main/res/layout/img_dialog.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/img_dialog"
@@ -8,27 +8,22 @@
     android:layout_height="match_parent"
     android:padding="10dp"
     android:background="@color/colorPrimary">
-
-    <ImageView
-        android:id="@+id/img_large"
+    <FrameLayout
         android:layout_width="wrap_content"
-        android:layout_height="250dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"/>
+        android:layout_height="250dp">
+        <ImageView
+            android:id="@+id/img_view"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"/>
 
-    <ProgressBar
-        style="?android:attr/progressBarStyle"
-        android:id="@+id/dialog_progress_bar"
-        android:visibility="visible"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        app:layout_constraintStart_toStartOf="@id/img_large"
-        app:layout_constraintEnd_toEndOf="@id/img_large"
-        app:layout_constraintTop_toTopOf="@id/img_large"
-        app:layout_constraintBottom_toBottomOf="@id/img_large"/>
-
+        <ProgressBar
+            style="?android:attr/progressBarStyle"
+            android:id="@+id/dialog_progress_bar"
+            android:visibility="visible"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"/>
+        </FrameLayout>
     <TextView
         android:id="@+id/img_info"
         android:layout_width="match_parent"
@@ -36,9 +31,6 @@
         android:gravity="center"
         android:textColor="#000000"
         android:textSize="16sp"
-        android:paddingTop="10dp"
-        app:layout_constraintTop_toBottomOf="@id/img_large"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        android:paddingTop="10dp"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
