--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -67,7 +67,7 @@
                 android:layout_weight="1"
                 android:layout_height="match_parent"
                 android:gravity="center"
-                android:background="@color/colorAccent">
+                android:background="@drawable/tab_selector">
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
@@ -89,7 +89,7 @@
                 android:layout_weight="1"
                 android:layout_height="match_parent"
                 android:gravity="center"
-                android:background="@color/colorPrimary">
+                android:background="@drawable/tab_selector">
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
@@ -111,7 +111,7 @@
                 android:layout_weight="1"
                 android:layout_height="match_parent"
                 android:gravity="center"
-                android:background="@color/colorPrimary">
+                android:background="@drawable/tab_selector">
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
